# lucia-lang

./: Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
benches/: compiler.rs  scripts.rs
benches/scripts/: add.lucia  gcd.lucia  iter_int.lucia  iter_str.lucia
crates/lucia-cli/: Cargo.toml
crates/lucia-cli/src/: args.rs  main.rs
crates/lucia-cli/src/commands/: lsp.rs  mod.rs  run.rs
crates/lucia-lsp/: Cargo.toml
crates/lucia-lsp/src/: document.rs  interning.rs  lib.rs  semantic_token.rs  utils.rs
crates/lucia-typing/: Cargo.toml
crates/lucia-typing/src/: env.rs  error.rs  lib.rs  meta_ops.rs  typing.rs
crates/lucia-typing/tests/: type_check.rs
examples/: cli.rs
examples/scripts/: conway_game.lucia  merge_sort.lucia
lucia-lang/: Cargo.toml  LICENSE-MIT  README.md
lucia-lang/benches/scripts/: call.lucia
lucia-lang/examples/scripts/: conway_game.lucia
lucia-lang/src/: frame.rs  lib.rs  meta_ops.rs
lucia-lang/src/compiler/: code.rs  lexer.rs  token.rs  typing.rs
lucia-lang/src/compiler_new/: event.rs  lexer.rs  lucia.ungram  marker.rs  mod.rs  parse.rs  parser.rs  sink.rs  token.rs
lucia-lang/src/compiler_new/ast/: generated.rs  mod.rs
lucia-lang/src/compiler_new/hir/: db.rs  mod.rs  typing.rs
lucia-lang/src/compiler_new/syntax/: generated.rs  mod.rs
lucia-lang/src/libs/: builtin.rs  io.rs  mod.rs  table.rs
lucia-lang/src/objects/: closure.rs  error.rs  mod.rs  registry.rs  string.rs  userdata.rs
lucia-lang/src/utils/: escape_str.rs  format.rs  location.rs  mod.rs
lucia-lang/tests/: comment.rs  try.rs
lucia-lang/tests/scripts/: assert.lucia  assign.lucia  closure.lucia  fn_call.lucia  for.lucia  for_table.lucia  oop.lucia  tail_call.lucia  variadic_fn.lucia
src/: analyzer.rs  ast.rs  code.rs  codegen.rs  context.rs  errors.rs  executor.rs  frame.rs  fuel.rs  lexer.rs  lib.rs  lvm.rs  main.rs  meta_ops.rs  object.rs  opcode.rs  parser.rs  thread.rs  token.rs  utils.rs  vm.rs
src/compiler/: analyzer.rs  ast.rs  code.rs  codegen.rs  error.rs  index.rs  interning.rs  ir.rs  lexer.rs  mod.rs  opcode.rs  optimizer.rs  parser.rs  semantic.rs  token.rs  typing.rs  value.rs
src/compiler/ast/: assign.rs  block.rs  effect.rs  expr.rs  function.rs  ident.rs  import.rs  lit.rs  member.rs  mod.rs  operator.rs  params.rs  pattern.rs  program.rs  ty.rs
src/gc/: cell.rs  gc_box.rs  heap.rs  mod.rs  trace.rs
src/libs/: builtin.rs  convert.rs  io.rs  mod.rs  string.rs  table.rs
src/objects/: any.rs  bool.rs  bytes.rs  callback.rs  closure.rs  code.rs  continuation.rs  conversion.rs  effect.rs  equal.rs  error.rs  ext_closure.rs  float.rs  function.rs  int.rs  macros.rs  mod.rs  null.rs  registry.rs  repr.rs  str.rs  string.rs  table.rs  userdata.rs  value.rs
src/utils/: escape.rs  escape_str.rs  float.rs  format.rs  join.rs  locatable.rs  location.rs  macros.rs  mod.rs  unescape.rs
tests/: scripts.rs  test.rs  try.rs  type_check.rs
tests/scripts/: assert.lucia  binary_operation.lucia  closure.lucia  do.lucia  effect.lucia  fn_call.lucia  for.lucia  for_table.lucia  if.lucia  match.lucia  oop.lucia  table.lucia  tail_call.lucia  try.lucia  type_convert.lucia  variadic_fn.lucia  while.lucia
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: grammar.rs  mod.rs  utils.rs
