[package]
name = "lucia-lang"
version = "0.2.0"
authors = ["st1020 <me@st1020.com>"]
edition = "2021"
description = "Lucia programming language"
readme = "README.md"
repository = "https://github.com/st1020/lucia-lang"
license = "MIT OR Apache-2.0"
keywords = ["language", "compiler", "lexer", "parser", "lucia"]
categories = ["compilers", "parser-implementations"]

[dependencies]
unicode-ident = "1.0"
thiserror = "1.0"
indexmap = "2.0"
gc-arena = "0.5"
bumpalo = { version = "3.0", features = ["boxed", "collections"] }
compact_str = "0.8.0"
text-size = "1.0"
index_vec = "0.1"
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scripts"
harness = false

[[bench]]
name = "compiler"
harness = false

[profile.release]
opt-level = 3
lto = true
