[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.2.0"
authors = ["st1020 <me@st1020.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/st1020/lucia-lang"

[workspace.dependencies]
lucia-lang = { path = "./" }
# String
text-size = "1"
compact_str = "0.9"
unicode-ident = "1"
rustc-literal-escaper = "0.0.7"
# Data Structure
itertools = "0.14"
derive_more = { version = "2", features = [
    "from",
    "debug",
    "display",
    "deref",
    "is_variant",
] }
ordered-float = "5"
oxc_index = { version = "4", features = ["nonmax"] }
sorted-vec = "0.8"
ordermap = "1"
rustc-hash = "2"
archery = "1"
rpds = "1"
# Error
thiserror = "2"
anyhow = "1"
# Log
log = "0.4"
env_logger = "0.11"
# Async
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
dashmap = "6"
# LSP
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tower-lsp-server = { version = "0.23", features = ["proposed"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Testing
criterion = "0.8"

[package]
name = "lucia-lang"
description = "Lucia programming language"
readme = "README.md"
keywords = ["language", "compiler", "lexer", "parser", "lucia"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
text-size.workspace = true
compact_str.workspace = true
unicode-ident.workspace = true
rustc-literal-escaper.workspace = true
itertools.workspace = true
derive_more.workspace = true
ordered-float.workspace = true
oxc_index.workspace = true
sorted-vec.workspace = true
ordermap.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "scripts"
harness = false

[[bench]]
name = "compiler"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.profiling]
inherits = "release"
debug = true
